syntax = "proto3";
package zrchain.zentp;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "zrchain/zentp/params.proto";

option go_package = "github.com/Zenrock-Foundation/zrchain/v6/x/zentp/types";

// GenesisState defines the zentp module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}
