import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgSetSolanaROCKSupplyResponse } from "./types/zrchain/zentp/tx";
import { Bridge } from "./types/zrchain/zentp/bridge";
import { Solana } from "./types/zrchain/zentp/params";
import { QueryMintsRequest } from "./types/zrchain/zentp/query";
import { QueryStatsResponse } from "./types/zrchain/zentp/query";
import { MsgBridgeResponse } from "./types/zrchain/zentp/tx";
import { MsgUpdateParams } from "./types/zrchain/zentp/tx";
import { Params } from "./types/zrchain/zentp/params";
import { MsgBridge } from "./types/zrchain/zentp/tx";
import { QueryParamsResponse } from "./types/zrchain/zentp/query";
import { QueryBurnsRequest } from "./types/zrchain/zentp/query";
import { MsgUpdateParamsResponse } from "./types/zrchain/zentp/tx";
import { QueryParamsRequest } from "./types/zrchain/zentp/query";
import { QueryStatsRequest } from "./types/zrchain/zentp/query";
import { QuerySolanaROCKSupplyRequest } from "./types/zrchain/zentp/query";
import { QuerySolanaROCKSupplyResponse } from "./types/zrchain/zentp/query";
import { MsgBurnResponse } from "./types/zrchain/zentp/tx";
import { MsgSetSolanaROCKSupply } from "./types/zrchain/zentp/tx";
import { GenesisState } from "./types/zrchain/zentp/genesis";
import { MsgBurn } from "./types/zrchain/zentp/tx";
import { QueryMintsResponse } from "./types/zrchain/zentp/query";
import { QueryBurnsResponse } from "./types/zrchain/zentp/query";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/zrchain.zentp.MsgSetSolanaROCKSupplyResponse", MsgSetSolanaROCKSupplyResponse],
    ["/zrchain.zentp.Bridge", Bridge],
    ["/zrchain.zentp.Solana", Solana],
    ["/zrchain.zentp.QueryMintsRequest", QueryMintsRequest],
    ["/zrchain.zentp.QueryStatsResponse", QueryStatsResponse],
    ["/zrchain.zentp.MsgBridgeResponse", MsgBridgeResponse],
    ["/zrchain.zentp.MsgUpdateParams", MsgUpdateParams],
    ["/zrchain.zentp.Params", Params],
    ["/zrchain.zentp.MsgBridge", MsgBridge],
    ["/zrchain.zentp.QueryParamsResponse", QueryParamsResponse],
    ["/zrchain.zentp.QueryBurnsRequest", QueryBurnsRequest],
    ["/zrchain.zentp.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/zrchain.zentp.QueryParamsRequest", QueryParamsRequest],
    ["/zrchain.zentp.QueryStatsRequest", QueryStatsRequest],
    ["/zrchain.zentp.QuerySolanaROCKSupplyRequest", QuerySolanaROCKSupplyRequest],
    ["/zrchain.zentp.QuerySolanaROCKSupplyResponse", QuerySolanaROCKSupplyResponse],
    ["/zrchain.zentp.MsgBurnResponse", MsgBurnResponse],
    ["/zrchain.zentp.MsgSetSolanaROCKSupply", MsgSetSolanaROCKSupply],
    ["/zrchain.zentp.GenesisState", GenesisState],
    ["/zrchain.zentp.MsgBurn", MsgBurn],
    ["/zrchain.zentp.QueryMintsResponse", QueryMintsResponse],
    ["/zrchain.zentp.QueryBurnsResponse", QueryBurnsResponse],
    
];

export { msgTypes }